All_Component_DX/force-app/main/default/objects/SM_Scheduling_Job_Summary__c/SM_Scheduling_Job_Summary__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Holds the job details run by Scheduling Engine</description>
    <label>Scheduling Job Summary</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling Job Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>