All_Component_DX/force-app/main/default/objects/SM_Scheduling_Job_Summary__c/fields/SM_Dispatch_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Dispatch_Process_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Servicemax Process</description>
    <label>Dispatch Process Id</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>Scheduling Job Summaries</relationshipLabel>
    <relationshipName>Scheduling_Job_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>