All_Component_DX/force-app/main/default/objects/SM_Scheduling_Job_Summary__c/fields/SM_Horizon_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Horizon_End_Date__c</fullName>
    <description>Events Creation End Date</description>
    <inlineHelpText>Events Creation End Date</inlineHelpText>
    <label>Horizon End Date</label>
    <type>Date</type>
</CustomField>