All_Component_DX/force-app/main/default/objects/SM_Scheduling_Job_Summary__c/fields/SM_Horizon_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Horizon_Start_Date__c</fullName>
    <description>Events Creation Start Date</description>
    <inlineHelpText>Events Creation Start Date</inlineHelpText>
    <label>Horizon Start Date</label>
    <type>Date</type>
</CustomField>