All_Component_DX/force-app/main/default/objects/SM_Scheduling_Job_Summary__c/fields/SM_Job_End_Time__c.field-meta.xml
<CustomField>
    <fullName>SM_Job_End_Time__c</fullName>
    <description>Time at which the Scheduling Job Ended</description>
    <inlineHelpText>Time at which the Scheduling Job Ended</inlineHelpText>
    <label>Job End Time</label>
    <type>Date</type>
</CustomField>