All_Component_DX/force-app/main/default/objects/SM_Scheduling_Job_Summary__c/fields/SM_JobId__c.field-meta.xml
<CustomField>
    <fullName>SM_JobId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Servicemax Jobs</description>
    <inlineHelpText>Lookup to Servicemax Jobs</inlineHelpText>
    <label>JobId</label>
    <referenceTo>SVMX_Jobs__c</referenceTo>
    <relationshipLabel>Scheduling Job Summaries</relationshipLabel>
    <relationshipName>Scheduling_Job_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>