All_Component_DX/force-app/main/default/objects/SM_Scheduling_Job_Summary__c/fields/SM_Territory__c.field-meta.xml
<CustomField>
    <fullName>SM_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technician&apos;s Territory</description>
    <inlineHelpText>Technician&apos;s Territory</inlineHelpText>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Scheduling Job Summaries</relationshipLabel>
    <relationshipName>Scheduling_Job_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>